fix btn squish issue

--- a/src/css/components/header/header-center.css
+++ b/src/css/components/header/header-center.css
@@ -84,3 +84,14 @@
     display: flex;
   }
 }
+
+.header__action-btn--user,
+.header__action-btn--cart,
+.header__action-btn--search {
+  > img {
+    width: 100%;
+    object-fit: contain;
+
+    max-width: 25px;
+  }
+}
